--- a/img/index.html
+++ b/img/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Bavon Ochieng😃</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&amp;display=swap">
@@ -152,6 +152,10 @@
         <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="mailto:ochiengbavon20@gmail.com">
             <i class="fa fa-envelope fa-fw"></i>
         </a>
+    <!-- GitHub Icon -->
+    <li class="list-inline-item">
+        <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://github.com/your-github-bavonjuke" target="_blank">
+            <i class="fa fa-github fa-fw"></i>
     </li>
 </ul>
 
@@ -279,7 +283,6 @@ resulting in a 30% reduction in on-site visits and a 25% increase in customer sa
                             <div class="col-lg-8 mx-auto">
                                 <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
                                 <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/submarine.png">
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                             </div>
                         </div>
                     </div>
