--- a/img/index.html
+++ b/img/index.html
@@ -71,7 +71,7 @@
     </section>
     <section id="contact">
     <div class="container">
-        <h2 class="text-uppercase text-center text-secondary mb-0">Contact Me</h2>
+        <h2 class="text-uppercase text-center text-secondary mb-0">Get In Touch</h2>
         <hr class="star-dark mb-5">
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -155,7 +155,7 @@
 </li>
 <!-- GitHub Icon -->
 <li class="list-inline-item">
-    <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://github.com/your-github-username" target="_blank">
+    <a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://github.com/bavonjuke" target="_blank">
         <i class="fa fa-github fa-fw"></i>
     </a>
 </li>
