--- a/img/index.html
+++ b/img/index.html
@@ -66,7 +66,7 @@
                     <p class="lead" style="padding-top: 0px;padding-right: 0px;"><br>As a customer-oriented professional, I am committed to delivering exceptional technical support while continuously expanding my skills in the ever-evolving field of information technology. My experience spans various roles, from ICT Assistant in a healthcare setting to Customer Success Specialist in a technology company, demonstrating versatility and adaptability in the IT industry.<br><br></p>
                 </div>
             </div>
-            <div class="text-center mt-4"><a class="btn btn-outline-light btn-xl" role="button" a href="assets/CV-Bavon Ochieng.pdf"><i class="fa fa-download me-2"></i><span>Resume</span></a></div>
+            <div class="text-center mt-4"><a class="btn btn-outline-light btn-xl" role="button" a href="assets/Bavon Ochieng CV.pdf"><i class="fa fa-download me-2"></i><span>Resume</span></a></div>
         </div>
     </section>
     <section id="contact">
